[gd_scene load_steps=14 format=3 uid="uid://cq5lh3icngbm"]

[ext_resource type="Script" uid="uid://drjge0pvvvea" path="res://scripts/door.gd" id="1_5qqnd"]
[ext_resource type="Script" uid="uid://ok24w4lhsf8h" path="res://scripts/fog.gd" id="2_yvb8a"]

[sub_resource type="BoxMesh" id="BoxMesh_5rl0v"]
size = Vector3(10, 0.2, 10)

[sub_resource type="BoxShape3D" id="BoxShape3D_8ixrx"]
size = Vector3(10, 0.2, 10)

[sub_resource type="BoxMesh" id="BoxMesh_nqq3p"]
size = Vector3(0.1, 3, 5)

[sub_resource type="BoxMesh" id="BoxMesh_e2nh3"]
size = Vector3(5, 3, 0.1)

[sub_resource type="BoxMesh" id="BoxMesh_fj3p5"]
size = Vector3(5, 3, 0.1)

[sub_resource type="BoxMesh" id="BoxMesh_kqyxv"]
size = Vector3(0.1, 3, 5)

[sub_resource type="BoxMesh" id="BoxMesh_nqxqw"]
size = Vector3(5, 0.1, 5)

[sub_resource type="BoxMesh" id="BoxMesh_p5nt1"]
size = Vector3(1, 2, 0.1)

[sub_resource type="BoxShape3D" id="BoxShape3D_u7iqx"]
size = Vector3(1, 2, 0.1)

[sub_resource type="BoxShape3D" id="BoxShape3D_0b3yd"]
size = Vector3(1.5, 2.5, 1.5)

[sub_resource type="Environment" id="Environment_mxvgj"]
fog_enabled = true
fog_light_color = Color(0.756863, 0.756863, 0.756863, 1)
fog_density = 0.0
fog_height = 1.0
fog_height_density = 0.5

[node name="DoorRoom" type="Node3D"]

[node name="Floor" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)

[node name="FloorMesh" type="MeshInstance3D" parent="Floor"]
mesh = SubResource("BoxMesh_5rl0v")

[node name="FloorCollision" type="CollisionShape3D" parent="Floor"]
shape = SubResource("BoxShape3D_8ixrx")

[node name="Room" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, -2.5)

[node name="WallLeft" type="MeshInstance3D" parent="Room"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 0, 0)
mesh = SubResource("BoxMesh_nqq3p")

[node name="WallBack" type="MeshInstance3D" parent="Room"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.5)
mesh = SubResource("BoxMesh_e2nh3")

[node name="WallFront" type="MeshInstance3D" parent="Room"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.5)
mesh = SubResource("BoxMesh_fj3p5")

[node name="DoorFrame" type="MeshInstance3D" parent="Room/WallFront"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, 0)
mesh = SubResource("BoxMesh_fj3p5")

[node name="WallRight" type="MeshInstance3D" parent="Room"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0, 0)
mesh = SubResource("BoxMesh_kqyxv")

[node name="Ceiling" type="MeshInstance3D" parent="Room"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
mesh = SubResource("BoxMesh_nqxqw")

[node name="Door" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("1_5qqnd")

[node name="DoorMesh" type="MeshInstance3D" parent="Door"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0)
mesh = SubResource("BoxMesh_p5nt1")

[node name="DoorCollision" type="StaticBody3D" parent="Door"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Door/DoorCollision"]
shape = SubResource("BoxShape3D_u7iqx")

[node name="InteractionArea" type="Area3D" parent="Door"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Door/InteractionArea"]
shape = SubResource("BoxShape3D_0b3yd")

[node name="Fog" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, -2.5)
visible = false
script = ExtResource("2_yvb8a")

[node name="WorldEnvironment" type="WorldEnvironment" parent="Fog"]
environment = SubResource("Environment_mxvgj")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, -2.5)
light_energy = 2.0
omni_range = 10.0

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 3, 5)

[node name="SpawnPoint" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 3)
